# Landmark

./: .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile  Implot3D.make  Shader_File_Test  flake.nix  flake2.nix  imgui.ini  log.txt  premake5.lua  premake5.lua-old  vcpkg.json
.devcontainer/: devcontainer.json  setup.sh
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 6ck37f1xm1ziq52i8wvgwi7gznaydkvr-source
.obsidian/: workspace.json
FrameGraph/: CMakeLists.txt
FrameGraph/src/: Blackboard.hpp  FG.hpp  FrameGraph.cpp  FrameGraph.hpp  FrameGraphPass.cpp  FrameGraphResource.cpp  GraphNode.cpp  GraphNode.hpp  PassNode.hpp  Resource.hpp  ResourceEntry.hpp  ResourceNode.cpp  ResourceNode.hpp
FrameGraphOld/: Blackboard.hpp  FrameGraph.hpp  FrameGraphPass.hpp  FrameGraphResource.hpp  GraphNode.hpp  PassNode.cpp  PassNode.hpp  ResourceEntry.cpp  ResourceEntry.hpp  ResourceNode.hpp
FrameGraphViz/: CMakeLists.txt
FrameGraphViz/src/: FrameGraphViz.cpp  FrameGraphViz.hpp  GLTexture.cpp  GLTexture.hpp  Main.cpp
GenericLib/: CMakeLists.txt
GenericLib/src/Debug/: Debug.hpp
GenericLib/src/Libs/: Boost.hpp  ENTT.hpp  GLFW.cpp  GLFW.hpp  GLM.hpp  ImGui.hpp  NlohmannJson.hpp  OpenGL.hpp  STB.hpp  Vulkan.hpp
GenericLib/src/Math/: Math.hpp
GenericLib/src/Utility/: Assert.hpp  Flags.hpp  Singleton.hpp
LandmarkEditor/: CMakeLists.txt
LandmarkEditor/src/: Entry.cpp
LandmarkEngine/: CMakeLists.txt
LandmarkEngine/src/: LandmarkEngine.cpp  LandmarkEngine.hpp
SimpleAppBase/: CMakeLists.txt
SimpleAppBase/src/: App.cpp  App.h  lib_include.h
SimpleAppBase/src/Extra/: Mesh.cpp  SSBO.hpp
demo/src/: PlayerController.hpp  entry.cpp
dependencies/implot/: implot.h
doc/: Frame.md  Lens.md  Stage.md  Tasks.md  Welcome.md
doc/Editor/: Designs.md  Editor Window.md  Editor.excalidraw
doc/Excalidraw/: AssetControl_old.md  Compiling.md  Drawing 2024-10-29 09.41.26.excalidraw.md  Material.md  Rendering.excalidraw  Rendering.md  Rendering_old.md  a.excalidraw
profiling/Landmark/: Landmark.ngfx-proj
res/models/: halforc.gltf
res/shaders/: Shader_Structs.h  test.frag  test.frag.spv  test.vert  test.vert.spv
resources/shaders/: test.vert.spv
scrapped src/Assets/: Asset.cpp  Asset.hpp  AssetEnums.hpp  AssetExplorer.hpp  AssetJsonUtils.hpp  AssetManager.cpp  AssetManager.hpp
scrapped src/ECS/: ComponentInfo.hpp  ComponentRegistry.cpp  ComponentRegistry.hpp  ECS_Forward.hpp  Scene.hpp  SceneManager.cpp  SceneManager.hpp
scrapped src/Editor/: Debug.h  Editor.cpp  Editor.h  EditorIcons.cpp  EditorLambda.hpp  EditorObjectGroup.cpp  EditorObjectGroup.hpp  EditorTool.cpp  EditorTool.hpp  EditorTopBar.hpp  EditorWindow.hpp  Imgui.cpp  Imgui.h  Imgui_utils.hpp
scrapped src/IO/: FileSystemObject.hpp  Folder.cpp  IO.h
scrapped src/RenderAPI_Old/: RenderAPI_old.cpp-old
scrapped src/Renderer/: Camera.cpp  Mesh.h  RenderViewport.cpp  RenderViewport.hpp  Renderer.cpp  Renderer.h-old
scrapped src/Rendering/: Act.hpp  Canvas.hpp  Film.cpp  Film.hpp  Frame.h  Schedule.cpp  Schedule.hpp  Stage.cpp  Stage.h  structs.cpp
scrapped src/Time/: Time.cpp  TimeTypes.h
scrapped src/Transform/: TransformComponent.hpp  TransformSystem.h
scrapped src/VK/: Vulkan_Instance.cpp  Vulkan_Instance.h
src/: Application.cpp  Application.cpp-EXC  Application.h-EXC  GenericEnums.h  IAttachableModule.h  IInternalModule.h  Landmark.h  Landmark.hpp  Logo.h  Shared_Structs.h  VMAImpl.hpp  entry.cpp  pch.cpp  pch.h
src/AssetControl/: Asset.hpp  AssetBrowser.cpp  AssetBrowser.hpp  AssetDescriptor.hpp  AssetGlobals.hpp  AssetRegistry.cpp  AssetRegistry.hpp  FileParser.cpp  FileParser.hpp  FileParserRegistry.cpp  FileParserRegistry.hpp  IFileParser.cpp  IFileParser.hpp
src/Assets/: Asset.hpp  AssetDescriptor.cpp  AssetDescriptor.hpp  AssetEnums.cpp  AssetEnums.hpp  AssetExplorer.cpp  AssetExplorer.hpp  AssetManager.cpp  AssetManager.hpp  TextureAssetDescriptor.cpp  TextureAssetDescriptor.hpp
src/Containers/: AllocVector_older.h-older  Flags.h  ObjectAllocator-new.h  ObjectAllocator.h  ReadWriteStack.h  lobby.h
src/Core/: App.cpp  App.h  AppModule.h  Entry.cpp  ImGuiCompositor.cpp  ImGuiCompositor.hpp  Landmark.cpp  Landmark.hpp  Window.cpp  Window.h  WorldCompositor.cpp  WorldCompositor.hpp
src/Debug/: Debug.h  Editor.cpp  Editor.h  EditorAction.cpp  EditorObject.h  EditorTool.cpp  EditorTool.h  Imgui.cpp  Imgui.h  ImguiHandler.cpp  ImguiHandler.h  Imgui_utils.hpp
src/ECS/: ComponentInfo.hpp  ComponentRegistry.h_old  ComponentRegistry.hpp  Defines.hpp  ECS.hpp  Entity.h_old  EntityManager.h_old  IComponentData.h_old  ObjectPointer.hpp-old  Scene.cpp  SceneManager.cpp  SceneManager.hpp  System.cpp  SystemManager.cpp  (+2 more)
tools/: Nsight-Graphics.sh
(+674 files in other folders)
